--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
     }
 
     sourceSets.test.resources.srcDirs += ["src/test/assets"]
+    defaultPublishConfig "release"
 }
 
 dependencies {
@@ -64,3 +65,6 @@ dependencies {
     androidTestImplementation TestLibraries.testRunner
     androidTestImplementation TestLibraries.espresso
 }
+
+apply from: '../publish.gradle'
+
